--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,6 @@ npm-debug.log
 /lib/draft_guru/data_collection/data_files
 
 # all application images
-/imgs/
+/imgs/*
+
+!/imgs/default_avatar.png
