--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,14 +26,14 @@ services:
       db:
         condition: service_healthy # Wait for db to be ready
     ports:
-      - "4001:4000" # Map container port 4000 to host port 4000
+      - "4001:4000" # Map container port 4001 to host port 4000
     environment:
       MIX_ENV: prod # Run in production mode inside container
       PHX_SERVER: "true" # Start the Phoenix server
       PORT: 4000
       PHX_HOST: localhost # Adjust for production if needed
       # Generate a secure secret key using `mix phx.gen.secret`
-      SECRET_KEY_BASE: e1VjR/2C44yMntVVcIdVZBI27RFgEKpNJ+JtuKoBHZLp+rI4qIPkWx1WtC8A0gxA # REPLACE THIS!
+      SECRET_KEY_BASE: e1VjR/2C44yMntVVcIdVZBI27RFgEKpNJ+JtuKoBHZLp+rI4qIPkWx1WtC8A0gxA
       # DATABASE_URL points to the 'db' service defined above
       DATABASE_URL: ecto://jbadmin:bX%24%21%23kZ23@db:5432/draft_guru_dev
       POOL_SIZE: 10 # Or adjust as needed
