--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: postgres:latest # Or a specific version like postgres:15
     container_name: draft_guru_db
     env_file:
-      - .env.dev
+      - .env
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -25,7 +25,7 @@ services:
     build: . # Build the image from the Dockerfile in the current directory
     container_name: draft_guru_app
     env_file:
-      - .env.dev
+      - .env
     depends_on:
       db:
         condition: service_healthy # Wait for db to be ready
