--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ npm-debug.log
 # .DS_Store files are created by macOS Finder.
 .DS_Store
 
+# .env files
+.env
+
 # 
 /lib/draft_guru/data_collection/data_files
 
