--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,11 +25,12 @@ services:
     environment:
       MIX_ENV:   ${MIX_ENV:-prod}
       PHX_SERVER: "true"
-      PORT: 4000
+      PORT: ${PORT:-4000}
       PHX_HOST: ${PHX_HOST}
       SECRET_KEY_BASE: ${SECRET_KEY_BASE}
       DATABASE_URL: ${DATABASE_URL}
       POOL_SIZE: 10
+      PUBLIC_CANONICAL_HOST: ${PUBLIC_CANONICAL_HOST}
     ports:
       - ${APP_PORTS:-"4000:4000"}
 
