updated for ipv4 traffic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   app:
     restart: always
     env_file:
-      - .env                 # each env has its own .env file
+      - .env                 
     depends_on:
       db:
         condition: service_healthy
